--- a/pages/About.html
+++ b/pages/About.html
@@ -134,7 +134,7 @@
             </div>
             <form action="cible.php" method="post">
                 <div class="p-10"><input class="input1" type="text" name="name" id="" placeholder="name"></div>
-                <div class="p-10"><textarea name="message" id="" cols="50" rows="10" style="background: #191D28;"></textarea></div>
+                <div class="p-10"><textarea name="message" id="" cols="50" rows="10" style="background: #191D28; border-radius: 7px;"></textarea></div>
                 <div><button>Contact Us</button></div>
             </form>
         </article>
